bases/nexus-backup-webapp/1.0.0/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-backup-webapp
spec:
  selector:
    app: nexus-backup-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
